@@ -2,12 +2,6 @@
 
 . /tmp/chroot-functions.sh
 
-update_env_settings
-
-setup_myfeatures
-
-show_debug
-
 # Setup the environment
 export FEATURES="${clst_myfeatures} nodoc noman noinfo"
 
