@@ -1,8 +1,8 @@
 #!/bin/bash
 
-. /tmp/chroot-functions.sh
+RUN_DEFAULT_FUNCS="no"
 
-update_env_settings
+source /tmp/chroot-functions.sh
 
 # Only run depscan.sh if modules exist
 if [ -n "$(ls /lib/modules)" ]
