@@ -2,17 +2,6 @@
 
 . /tmp/chroot-functions.sh
 
-update_env_settings
-
-setup_myfeatures
-
-show_debug
-
-if [ -n "${clst_FETCH}" ]
-then
-	export clst_myemergeopts="${clst_myemergeopts} -f"
-fi
-
 case ${clst_target} in
 	livecd*|stage4)
 		run_emerge --oneshot genkernel
